# dust

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  analysis_options.yaml  cliff.toml  install.ps1  install.sh  pubspec.yaml
crates/dust_cache/: Cargo.toml  README.md
crates/dust_cache/src/: lib.rs  store.rs
crates/dust_cli/: Cargo.toml  README.md
crates/dust_cli/src/: args.rs  exit_code.rs  lib.rs  main.rs  render.rs  run.rs  terminal.rs
crates/dust_cli/tests/: args_tests.rs  cli_tests.rs  perf_tests.rs
crates/dust_cli/tests/cli_tests/: binary.rs  build.rs  diagnostics.rs  helpers.rs  i18n.rs  lifecycle.rs
crates/dust_dart_emit/: Cargo.toml  README.md
crates/dust_dart_emit/src/: dart_names.rs  lib.rs  literals.rs  rename.rs  source.rs  templates.rs  type_render.rs
crates/dust_dart_syntax/: Cargo.toml  README.md
crates/dust_dart_syntax/src/: lib.rs  literals.rs  scanner.rs  values.rs
crates/dust_db_plugin/: Cargo.toml
crates/dust_db_plugin/benches/: db_emit.rs
crates/dust_db_plugin/src/: lib.rs
crates/dust_db_plugin/src/plugin/: constants.rs  emit.rs  mod.rs  model.rs  parse.rs  sql.rs  validate.rs
crates/dust_db_plugin/tests/: db_plugin_tests.rs
crates/dust_db_plugin/tests/db_plugin_tests/: emission.rs  sqlx_validation.rs  support.rs  validation.rs
crates/dust_diagnostics/: Cargo.toml  README.md
crates/dust_diagnostics/src/: diagnostic.rs  label.rs  lib.rs  render.rs  severity.rs
crates/dust_diagnostics/tests/: dart_examples.rs  render_tests.rs
crates/dust_driver/: Cargo.toml  README.md
crates/dust_driver/src/: build.rs  catalog.rs  check.rs  clean.rs  context.rs  doctor.rs  i18n_arb.rs  i18n_assets.rs  i18n_bootstrap.rs  i18n_build.rs  i18n_check.rs  i18n_keys.rs  i18n_scan.rs  lib.rs  lower.rs  progress.rs  request.rs  result.rs  watch.rs
crates/dust_driver/src/i18n_arb/: metadata.rs  render.rs  write.rs
crates/dust_driver/src/i18n_check/: read.rs  validate.rs
crates/dust_driver/src/lower/: inheritance.rs  parse_support.rs  query_calls.rs  serde.rs  serde_parse.rs  tests_declarations.rs  tests_directives.rs  tests_inheritance.rs  tests_serde.rs  tests_type.rs  type_parse.rs
crates/dust_driver/src/watch/: snapshot.rs
crates/dust_driver/tests/: driver_tests.rs
crates/dust_driver/tests/driver_tests/: build_behavior.rs  build_outputs.rs  build_validation.rs  commands.rs  db_outputs.rs  http_client_outputs.rs  i18n_asset_outputs.rs  i18n_check_outputs.rs  i18n_outputs.rs  i18n_stress_outputs.rs  output_policy.rs  pub_workspace.rs  routing_outputs.rs  source_audit.rs  state_outputs.rs  support.rs  watch.rs
crates/dust_driver/tests/fixtures/: routing_route_golden.dart
crates/dust_emitter/: Cargo.toml  README.md
crates/dust_emitter/src/: emit.rs  format.rs  lib.rs  merge.rs  write.rs  writer.rs
crates/dust_emitter/src/templates/: mixin_block.jinja
crates/dust_emitter/tests/: emitter_tests.rs
crates/dust_emitter/tests/emitter_tests/: emit.rs  support.rs  write.rs
crates/dust_http_client_plugin/: Cargo.toml
crates/dust_http_client_plugin/src/: lib.rs  plugin.rs
crates/dust_http_client_plugin/src/plugin/: build.rs  constants.rs  model.rs  util.rs
crates/dust_http_client_plugin/tests/: http_client_plugin_tests.rs
crates/dust_http_client_plugin/tests/http_client_plugin_tests/: emission.rs  emission_params.rs  emission_request.rs  (+8 more)
crates/dust_ir/: Cargo.toml  README.md
crates/dust_ir/src/: annotation.rs  class.rs  constructor.rs  declaration.rs  directive.rs  enum_type.rs  field.rs  lib.rs  library.rs  lowering.rs  method.rs  query_call.rs  serde.rs  traits.rs  types.rs  workspace.rs
crates/dust_ir/tests/: dart_examples.rs  ir_tests.rs
crates/dust_parser_dart/: Cargo.toml  README.md
crates/dust_parser_dart/src/: annotation_args.rs  annotation_value.rs  backend.rs  lib.rs  options.rs  query_call.rs  result.rs  surface.rs  type_surface.rs
crates/dust_parser_dart/tests/: contract_tests.rs  dart_examples.rs
crates/dust_parser_dart_ts/: Cargo.toml  README.md
crates/dust_parser_dart_ts/src/: annotations.rs  classes.rs  declarations.rs  diagnostics.rs  directives.rs  enums.rs  i18n.rs  lib.rs  queries.rs  syntax.rs  types.rs
crates/dust_parser_dart_ts/tests/: extract_tests.rs
crates/dust_plugin_api/: Cargo.toml  README.md
crates/dust_plugin_api/src/: analysis.rs  contribution.rs  lib.rs  plugin.rs  registry.rs  symbols.rs
crates/dust_plugin_api/tests/: plugin_contribution_tests.rs  registry_execution_tests.rs  registry_ownership_tests.rs  registry_symbol_plan_tests.rs  registry_tests.rs
crates/dust_plugin_derive/: Cargo.toml  README.md
crates/dust_plugin_derive/src/: analysis.rs  emit.rs  lib.rs  plugin.rs  validate.rs
crates/dust_plugin_derive/tests/: derive_plugin_matrix_tests.rs  derive_plugin_tests.rs
crates/dust_plugin_serde/: Cargo.toml  README.md
crates/dust_plugin_serde/src/: analysis.rs  emit.rs  emit_class.rs  emit_enum.rs  emit_sealed.rs  emit_support.rs  emit_variant_class.rs  lib.rs  plugin.rs  validate.rs  writer.rs  writer_expr.rs  writer_model.rs  writer_type.rs
crates/dust_plugin_serde/tests/: class_tests.rs  enum_tests.rs  serde_plugin_tests.rs  type_tests.rs  validation_tests.rs  validation_unsupported_tests.rs
crates/dust_resolver/: Cargo.toml  README.md
crates/dust_resolver/src/: annotations.rs  catalog.rs  lib.rs  resolve.rs  resolve_support.rs  result.rs
crates/dust_resolver/tests/: annotation_values.rs  resolver_tests.rs
crates/dust_route_plugin/: Cargo.toml
crates/dust_route_plugin/src/: lib.rs  plugin.rs
crates/dust_route_plugin/tests/: route_plugin_tests.rs
crates/dust_state_plugin/: Cargo.toml
crates/dust_state_plugin/benches/: state_emit.rs
crates/dust_state_plugin/src/: lib.rs  plugin.rs
crates/dust_state_plugin/tests/: state_plugin_tests.rs
crates/dust_workspace/: Cargo.toml  README.md
crates/dust_workspace/src/: config.rs  discover.rs  lib.rs  output_policy.rs  package_config.rs  pubspec.rs  root.rs  workspace.rs
crates/dust_workspace/tests/: workspace_tests.rs
(+752 files in other folders)
