[package]
name = "dust_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust_plugin_api = { path = "../dust_plugin_api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.27.0"

[lib]
path = "src/lib.rs"
