[package]
name = "dust_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust_driver = { path = "../dust_driver" }

[dev-dependencies]
dust_diagnostics = { path = "../dust_diagnostics" }
tempfile = "3.27.0"

[lib]
name = "dust_cli"
path = "src/lib.rs"

[[bin]]
name = "dust"
path = "src/main.rs"
