[package]
name = "dust_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the Dust Dart code generation tool."

[dependencies]
clap.workspace = true
dust_diagnostics = { path = "../dust_diagnostics", version = "0.1.1" }
dust_driver = { path = "../dust_driver", version = "0.1.1" }

[dev-dependencies]
dust_text = { path = "../dust_text", version = "0.1.1" }
tempfile = "3.27.0"

[lib]
name = "dust_cli"
path = "src/lib.rs"

[[bin]]
name = "dust"
path = "src/main.rs"
