[package]
name = "dust_parser_dart_ts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust_text = { path = "../dust_text" }
dust_diagnostics = { path = "../dust_diagnostics" }
dust_parser_dart = { path = "../dust_parser_dart" }
tree-sitter = "0.25.10"
tree-sitter-dart = "0.1.0"

[lib]
path = "src/lib.rs"
