[package]
name = "dust_plugin_api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
dust_ir = { path = "../dust_ir" }
dust_diagnostics = { path = "../dust_diagnostics" }
dust_parser_dart = { path = "../dust_parser_dart" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
dust_text = { path = "../dust_text" }

[lib]
path = "src/lib.rs"
