[package]
name = "dust_plugin_derive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Derive feature plugin for Dust Dart code generation."

[dependencies]
dust_dart_emit = { path = "../dust_dart_emit", version = "0.1.1" }
dust_ir = { path = "../dust_ir", version = "0.1.1" }
dust_plugin_api = { path = "../dust_plugin_api", version = "0.1.1" }
dust_diagnostics = { path = "../dust_diagnostics", version = "0.1.1" }
dust_parser_dart = { path = "../dust_parser_dart", version = "0.1.1" }

[dev-dependencies]
dust_text = { path = "../dust_text", version = "0.1.1" }

[lib]
path = "src/lib.rs"
