[package]
publish = false
name = "dust_resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Symbol resolution for Dust traits and config annotations."

[dependencies]
dust_parser_dart = { path = "../dust_parser_dart", version = "0.1.1" }
dust_diagnostics = { path = "../dust_diagnostics", version = "0.1.1" }
dust_ir = { path = "../dust_ir", version = "0.1.1" }
dust_text = { path = "../dust_text", version = "0.1.1" }

[dev-dependencies]
dust_parser_dart_ts = { path = "../dust_parser_dart_ts", version = "0.1.1" }

[lib]
path = "src/lib.rs"
