[package]
publish = false
name = "dust_route_plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed Navigator 2.0 route generation plugin for Dust."

[dependencies]
dust_diagnostics = { path = "../dust_diagnostics", version = "0.1.1" }
dust_ir = { path = "../dust_ir", version = "0.1.1" }
dust_parser_dart = { path = "../dust_parser_dart", version = "0.1.1" }
dust_plugin_api = { path = "../dust_plugin_api", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
dust_text = { path = "../dust_text", version = "0.1.1" }

[lib]
path = "src/lib.rs"
